--- a/resume/index.html
+++ b/resume/index.html
@@ -130,7 +130,7 @@
                 Interpersonal Skills with colleagues and clients. In both my academic and professional life, I have been
                 constantly praised as a fast learner by my professors and peers. Whether working on academic,
                 extracurricular or professional projects, I apply proven time management, multi-tasking and problem
-                solving skills, which I hope to leverage into my role in my future role.
+                solving skills, which I hope to leverage into my future role.
               </p>
             </div>
             <a href="./cv/Sazal Alam Cover Letter.pdf" download target="_blank">
