--- a/resume/index.html
+++ b/resume/index.html
@@ -81,7 +81,7 @@
                 <a href="#contact">
                   <button type="button" class="btn button primary-button text-uppercase">hire me</button>
                 </a>
-                <a href="./cv/NWCV.pdf" download="Sazal Alam CV" target="_blank">
+                <a href="./cv/CV Sazal Alam.pdf" download="Sazal Alam CV" target="_blank">
                   <button type="button" class="btn button secondary-button text-uppercase">Get CV</button>
                 </a>
               </div>
@@ -133,7 +133,7 @@
                 solving skills, which I hope to leverage into my future role.
               </p>
             </div>
-            <a href="./cv/Sazal Alam Cover Letter.pdf" download target="_blank">
+            <a href="./cv/Sazal Alam Cover Letter1.pdf" download="Sazal Alam Cover Letter" target="_blank">
               <button type="button" class="btn button primary-button text-upperclass">Cover Letter</button>
             </a>
           </div>
