--- a/resume/index.html
+++ b/resume/index.html
@@ -81,7 +81,7 @@
                 <a href="#contact">
                   <button type="button" class="btn button primary-button text-uppercase">hire me</button>
                 </a>
-                <a href="./cv/Sazal Alam CV.pdf" download="Sazal Alam CV" target="_blank">
+                <a href="./cv/Sazal Alam CV1.pdf" download="Sazal Alam CV" target="_blank">
                   <button type="button" class="btn button secondary-button text-uppercase">Get CV</button>
                 </a>
               </div>
